--- a/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
+++ b/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
@@ -232,8 +232,8 @@
                         matInput [maxlength]="50">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Aadhaar No</mat-label>
-                    <input formControlName="AadharNo" (blur)="OnBlur()" autocomplete="Off" #Pincode matInput
+                    <mat-label>Adhaar No</mat-label>
+                    <input formControlName="AdhaarNo" (blur)="OnBlur()" autocomplete="Off" #Pincode matInput
                         [maxlength]="10">
                 </mat-form-field>
                 <mat-form-field appearance="outline" [style.width.px]="250">
