--- a/src/app/modules/studentactivity/studentfamilynfriend/studentfamilynfriend.component.scss
+++ b/src/app/modules/studentactivity/studentfamilynfriend/studentfamilynfriend.component.scss
@@ -17,8 +17,9 @@ mat-form-field{
     justify-content: center;
     flex:1 0 80px;
 }
-.mat-column-SiblingId
+.mat-column-SiblingName
 {
+    margin-right: 15px;
     flex: 1 0 250px;
 }
 .mat-column-StudentFamilyNFriendId{
