--- a/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.html
+++ b/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.html
@@ -38,7 +38,7 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field appearance="outline">
-                    <input [maxlength]="250" autocomplete="Off" matInput (blur)="onBlur(element)"
+                    <input [maxlength]="100" autocomplete="Off" matInput (blur)="onBlur(element)"
                         [value]="element.Title" [(ngModel)]="element.Title">
                 </mat-form-field>
             </mat-cell>
@@ -58,13 +58,13 @@
                 </mat-form-field>
             </mat-cell>
         </ng-container>
-        <ng-container matColumnDef="Value">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Value
+        <ng-container matColumnDef="Description">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Description
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field appearance="outline">
-                    <input [maxlength]="30" autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.Value"
-                        [(ngModel)]="element.Value">
+                    <input [maxlength]="256" autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.Description"
+                        [(ngModel)]="element.Description">
                 </mat-form-field>
             </mat-cell>
         </ng-container>
