--- a/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.scss
+++ b/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.scss
@@ -11,12 +11,12 @@ mat-cell:first-of-type {
 .mat-column-ClassEvaluationAnswerOptionsId{
     flex:1 0 60px;
 }
+.mat-column-Description,
 .mat-column-ParentId,
 .mat-column-Title
 {
     flex:1 0 250px;
 }
-.mat-column-Value,
 .mat-column-Point
 {
     flex:1 0 80px;
