--- a/src/app/modules/studentactivity/sportsresult/sportsresult.component.html
+++ b/src/app/modules/studentactivity/sportsresult/sportsresult.component.html
@@ -7,10 +7,10 @@
         <div>
             <mat-form-field appearance="outline" [style.width.px]="300">
                 <mat-label>Student</mat-label>
-                <input type="text" matInput (change)="SetStudentClassId()"                 
+                <input type="text" matInput
                 formControlName="searchStudentName"
                     [matAutocomplete]="auto">
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                <mat-autocomplete (optionSelected)="SetStudentClassId()" #auto="matAutocomplete" [displayWith]="displayFn">
                     <mat-option *ngFor="let option of filteredStudents | async" [value]="option">
                         {{option.Name}}
                     </mat-option>
@@ -18,7 +18,7 @@
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Activity</mat-label>
-                <mat-select formControlName="searchSportsNameId">
+                <mat-select formControlName="searchActivityId" (selectionChange)="SetCategory()">
                     <mat-option value="0">select</mat-option>
                     <mat-option *ngFor="let item of ActivityNames" [value]="item.MasterDataId">
                         {{item.MasterDataName}}</mat-option>
@@ -41,7 +41,9 @@
             </mat-form-field>
         </div>
         <div style="width:100%;display: flex; justify-content: center;">
-            <button [disabled]="loading" style="margin-right:15px" mat-raised-button color="accent"
+            <button [disabled]="loading" style="margin-right:15px" 
+            matTooltip="search"
+            mat-raised-button color="accent"
                 (click)="GetSportsResult()">
                 <mat-icon>search</mat-icon>
                 <mat-icon *ngIf="loading">
@@ -78,7 +80,7 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field appearance="outline">
-                    <textarea matInput [rows]="5" [maxlength]="250" (blur)="onBlur(element)"
+                    <textarea matInput [maxlength]="250" (blur)="onBlur(element)"
                         [value]="element.Achievement" [(ngModel)]="element.Achievement">
                         </textarea>
                 </mat-form-field>
