--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.html
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.html
@@ -15,8 +15,7 @@
     </mat-form-field>
     <mat-form-field appearance="outline" style="width:150px">
         <mat-label>Class</mat-label>
-        <mat-select formControlName="searchClassId"
-        (selectionChange)="GetStudentGrade()">
+        <mat-select formControlName="searchClassId" (selectionChange)="GetStudentGrade()">
             <!-- <mat-option [value]="0">--class--</mat-option> -->
             <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                 {{item.ClassName}}
@@ -33,17 +32,17 @@
     </mat-form-field>
     <button style="margin-right: 15px;" [disabled]="loading" mat-raised-button color="accent"
         (click)="GetExamStudentSubjectResults()">
-         <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+        <mat-icon>search</mat-icon>
+        <mat-icon *ngIf="loading">
+            <mat-spinner diameter="20" color="Blue"></mat-spinner>
+        </mat-icon>
     </button>
     <button style="margin-right: 400px;" [disabled]="loading" matTooltip="clear all" class="mat-raised-button"
         (click)="clear()">
         <mat-icon>clear_all</mat-icon>
     </button>
-    <button [disabled]="loading || ClickedVerified" matTooltip="verified" *ngIf="ExamStudentSubjectResult.length>0" mat-raised-button
-        color="accent" (click)="Verified()">
+    <button [disabled]="loading || ClickedVerified" matTooltip="verified" *ngIf="ExamStudentSubjectResult.length>0"
+        mat-raised-button color="accent" (click)="Verified()">
         <mat-icon>checked</mat-icon>
     </button>
 </form>
